--- a/index.html
+++ b/index.html
@@ -98,14 +98,18 @@
                 <ol class="carousel-indicators">
                     <li data-target="#customCar" data-slide-to="0" class="active"></li>
                     <li data-target="#customCar" data-slide-to="1"></li>
+                    <li data-target="#customCar" data-slide-to="2"></li>
                 </ol>
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/1.jpg" alt="Los Angeles" width="100%">
+                        <img class="d-block w-100" src="images/slides/webFlayer01.png" alt="Web Banner 01" style="height: 100vh; width: 100vw">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/2.jpg" alt="Chicago" width="100%">
+                        <img class="d-block w-100" src="images/slides/webFlayer02.png" alt="Web Banner 02" style="height: 100vh; width: 100vw">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/slides/webFlayer03.png" alt="Web Banner 03" style="height: 100vh; width: 100vw">
                     </div>
                 </div>
                 <!-- Left and right controls -->
@@ -114,7 +118,7 @@
                 </a>
                 <a class="carousel-control-next" href="#customCar" data-slide="next">
                     <span class="carousel-control-next-icon"></span>
-                </a>
+                </a>                
             </div>
         </div>
     </section>
@@ -193,43 +197,36 @@
                     <div class="card pathways-card" id="card-2" style="width: 18rem;">
                         <div class="card-body">
                             <h4 class="card-title">
-                                <strong>WHAT IS SS12?</strong>
-                            </h4>
-                            <h6 class="card-subtitle mb-2 text-muted">A Brief Introduction</h6>
+                                <strong>WHAT IS MAKER FAIR?</strong>
+                            </h4>                            
                             <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo">
-                            <p class="card-text pathways-card-text">SS12 is a
-                                <strong>Code-A-Thon and Make-A-Thon Challenge</strong> organized to recognize the best social innovators
-                                in Asia Pacific. The theme for this year is
-                                <strong>‘EMPATHY TO ENGINEERING: SOLUTIONS FOR MACRO ISSUES’</strong>. Students form Universities
-                                all over Asia and Middle East will be participating displaying their engineering skills.</p>
+                            <p class="card-text pathways-card-text">A 
+                                <strong>Maker Fair</strong> is a celebration of innovators, makers, doers coming together to showcase 
+                                their products to the local community. All types of makers like Tech enthusiasts, Crafters, Tinkerers, 
+                                Hobbyists, Industries and other organizations, clubs and forums, authors, artists, students and entrepreneurs 
+                                are welcome to the Maker Fair.</p>
                         </div>
                     </div>
                     <div class="card pathways-card" id="card-3" style="width: 18rem;">
                         <div class="card-body">
                             <h4 class="card-title">
-                                <strong>WHAT IS SS12?</strong>
-                            </h4>
-                            <h6 class="card-subtitle mb-2 text-muted">A Brief Introduction</h6>
+                                <strong>WHAT IS SS12 JUNIOR EINSTEIN?</strong>
+                            </h4>                            
                             <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo">
-                            <p class="card-text pathways-card-text">SS12 is a
-                                <strong>Code-A-Thon and Make-A-Thon Challenge</strong> organized to recognize the best social innovators
-                                in Asia Pacific. The theme for this year is
-                                <strong>‘EMPATHY TO ENGINEERING: SOLUTIONS FOR MACRO ISSUES’</strong>. Students form Universities
-                                all over Asia and Middle East will be participating displaying their engineering skills.</p>
+                            <p class="card-text pathways-card-text"><strong>Fresh minds</strong> cater for fresh innovations in the domains 
+                                untouched and for the issues unresolved. We invite students with curious minds to explore the possibility of becoming Einstein.</p>
                         </div>
                     </div>
                     <div class="card pathways-card" id="card-4" style="width: 18rem;">
                         <div class="card-body">
                             <h4 class="card-title">
-                                <strong>WHAT IS SS12?</strong>
-                            </h4>
-                            <h6 class="card-subtitle mb-2 text-muted">A Brief Introduction</h6>
+                                <strong>WHAT IS SS12 VIRTUAL TRACK?</strong>
+                            </h4>                            
                             <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo">
-                            <p class="card-text pathways-card-text">SS12 is a
-                                <strong>Code-A-Thon and Make-A-Thon Challenge</strong> organized to recognize the best social innovators
-                                in Asia Pacific. The theme for this year is
-                                <strong>‘EMPATHY TO ENGINEERING: SOLUTIONS FOR MACRO ISSUES’</strong>. Students form Universities
-                                all over Asia and Middle East will be participating displaying their engineering skills.</p>
+                            <p class="card-text pathways-card-text">Nothing can stop people from showing off their innovation for social 
+                                cause to the right audience at the right time. Distance does not matter; money is no obstacle, if your project 
+                                is a point of pride for you. Participants who cannot reach the venue physically are invited to register for virtual 
+                                track to present their projects online.</p>
                         </div>
                     </div>
                 </div>
@@ -381,30 +378,30 @@
                 <div class="container gallery-section">
                     <div class="row gallery-row">
                         <div class="col-lg-4 col-md-4">
-                            <img class="gallery-item" src="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg"
+                            <img class="gallery-item" src="images/gallery/ss12_1.jpg"
                             />
                         </div>
                         <div class="col-lg-4 col-md-4">
-                            <img class="gallery-item" src="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg"
+                            <img class="gallery-item" src="images/gallery/ss12_2.jpg"
                             />
                         </div>
                         <div class="col-lg-4 col-md-4">
-                            <img class="gallery-item" src="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg"
+                            <img class="gallery-item" src="images/gallery/ss12_3.jpg"
                             />
                         </div>
                     </div>
 
                     <div class="row gallery-row">
                         <div class="col-lg-4 col-md-4">
-                            <img class="gallery-item" src="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg"
+                            <img class="gallery-item" src="images/gallery/ss12_4.jpg"
                             />
                         </div>
                         <div class="col-lg-4 col-md-4">
-                            <img class="gallery-item" src="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg"
+                            <img class="gallery-item" src="images/gallery/ss12_5.jpg"
                             />
                         </div>
                         <div class="col-lg-4 col-md-4">
-                            <img class="gallery-item" src="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg"
+                            <img class="gallery-item" src="images/gallery/ss12_6.jpg"
                             />
                         </div>
                     </div>
@@ -629,9 +626,12 @@
     <script src="js/jquery.countdown.js"></script>
     <script src="js/jquery.countdown.min.js"></script>
 
+    <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
+
     <script type="text/javascript">
-        $('#clock').countdown('2020/10/10', function (event) {
+        $('#clock').countdown('2018/09/08', function (event) {
             var $this = $(this).html(event.strftime('' +
+                '<span class="numText">%w</span> weeks ' +
                 '<span class="numText">%d</span> days ' +
                 '<span class="numText">%H</span> hr ' +
                 '<span class="numText">%M</span> min ' +
