some of the changes to parthway cards

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             </h4>
                             <!-- <h6 class="card-subtitle mb-2 text-muted">A Brief Introduction</h6> -->
                             <!-- <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo"> -->
-                            <p class="card-text pathways-card-text" style=" margin-top: 40px">SS12 is a
+                            <p class="card-text pathways-card-text" style=" margin-top: 50px">SS12 is a
                                 <strong>Code-A-Thon and Make-A-Thon Challenge</strong> organized to recognize the best social innovators in Asia Pacific. The theme for this year is
                                 <strong>‘EMPATHY TO ENGINEERING: SOLUTIONS FOR MACRO ISSUES’</strong>. Students form Universities all over Asia and Middle East will be participating displaying their engineering skills.</p>
                         </div>
@@ -205,7 +205,7 @@
                                 <strong>WHAT IS MAKER FAIR?</strong>
                             </h4>
                             <!-- <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo"> -->
-                            <p class="card-text pathways-card-text" style=" margin-top: 40px">A
+                            <p class="card-text pathways-card-text" style=" margin-top: 50px">A
                                 <strong>Maker Fair</strong> is a celebration of innovators, makers, doers coming together to showcase their products to the local community. All types of makers like Tech enthusiasts, Crafters, Tinkerers, Hobbyists, Industries
                                 and other organizations, clubs and forums, authors, artists, students and entrepreneurs are welcome to the Maker Fair.</p>
                         </div>
@@ -221,7 +221,7 @@
                                 <strong>WHAT IS SS12 JUNIOR EINSTEIN?</strong>
                             </h4>
                             <!-- <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo"> -->
-                            <p class="card-text pathways-card-text">
+                            <p class="card-text pathways-card-text" style=" margin-top: 25px">
                                 <strong>Fresh minds</strong> cater for fresh innovations in the domains untouched and for the issues unresolved. We invite students with curious minds to explore the possibility of becoming Einstein.
                             </p>
                         </div>
@@ -237,7 +237,7 @@
                                 <strong>WHAT IS SS12 VIRTUAL TRACK?</strong>
                             </h4>
                             <!-- <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo"> -->
-                            <p class="card-text pathways-card-text">Nothing can stop people from showing off their innovation for social cause to the right audience at the right time. Distance does not matter; money is no obstacle, if your project is a point of pride for you. Participants who
+                            <p class="card-text pathways-card-text" style=" margin-top: 25px">Nothing can stop people from showing off their innovation for social cause to the right audience at the right time. Distance does not matter; money is no obstacle, if your project is a point of pride for you. Participants who
                                 cannot reach the venue physically are invited to register for virtual track to present their projects online.</p>
 
                         </div>
