parth-way card changes

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <div class="card pathways-card" id="card-3" style="width: 18rem;">
                         <div class="card-body">
                             <h4 class="card-title">
-                                <strong>SS12 JUNIOR EINSTEIN</strong>
+                                <strong>JUNIOR EINSTEIN</strong>
                             </h4>
                             <!-- <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo"> -->
                             <p class="card-text pathways-card-text" style=" margin-top: 40px">
@@ -234,7 +234,7 @@
                     <div class="card pathways-card" id="card-4" style="width: 18rem;">
                         <div class="card-body">
                             <h4 class="card-title">
-                                <strong>SS12 VIRTUAL TRACK</strong>
+                                <strong>VIRTUAL TRACK</strong>
                             </h4>
                             <!-- <img class="card-img-top" src="images/ss12logo.png" alt="SS12 Logo"> -->
                             <p class="card-text pathways-card-text" style=" margin-top: 40px">Nothing can stop people from showing off their innovation for social cause to the right audience at the right time. Distance does not matter; money is no obstacle, if your project is a point of pride for you. Participants who
