changes to about me page cards

--- a/about.html
+++ b/about.html
@@ -73,14 +73,9 @@
                 <div class="card" id="card-1" style="width: 70rem;">
                     <div class="container" style="padding: 3em;">
                         <div class="row">
-                            <div class="col-lg-4">
-                                <p></p>
-                            </div>
-                            <div class="col-lg-4">
-                                <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo">
-                            </div>
-                            <div class="col-lg-4">
-                                <p></p>
+                            <div class="col-lg-12">
+                                <!-- <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo"> -->
+                                <center><h1>WHAT IS SS12</h1></center>
                             </div>
                         </div>
                     </div>
@@ -96,14 +91,8 @@
                 <div class="card" id="card-2" style="width: 70rem;">
                     <div class="container" style="padding: 3em;">
                         <div class="row">
-                            <div class="col-lg-4">
-                                <p></p>
-                            </div>
-                            <div class="col-lg-4">
-                                <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo">
-                            </div>
-                            <div class="col-lg-4">
-                                <p></p>
+                            <div class="col-lg-12">
+                                <center><h1>MAKER FAIR</h1></center>
                             </div>
                         </div>
                     </div>
@@ -119,14 +108,8 @@
                 <div class="card" id="card-3" style="width: 70rem;">
                     <div class="container" style="padding: 3em;">
                         <div class="row">
-                            <div class="col-lg-4">
-                                <p></p>
-                            </div>
-                            <div class="col-lg-4">
-                                <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo">
-                            </div>
-                            <div class="col-lg-4">
-                                <p></p>
+                            <div class="col-lg-12">
+                                <center><h1>JUNIOR EINSTEIN</h1></center>
                             </div>
                         </div>
                     </div>
@@ -142,15 +125,12 @@
                 <div class="card" id="card-4" style="width: 70rem;">
                     <div class="container" style="padding: 3em;">
                         <div class="row">
-                            <div class="col-lg-4">
-                                <p></p>
+                            
+                            <div class="col-lg-12">
+                                <!-- <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo"> -->
+                                <center><h1>VIRTUAL TRACK</h1></center>
                             </div>
-                            <div class="col-lg-4">
-                                <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo">
-                            </div>
-                            <div class="col-lg-4">
-                                <p></p>
-                            </div>
+                            
                         </div>
                     </div>
                     <div class="card-body" style="text-align: justify;">
