--- a/about.html
+++ b/about.html
@@ -74,8 +74,7 @@
                     <div class="container" style="padding: 3em;">
                         <div class="row">
                             <div class="col-lg-12">
-                                <!-- <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo"> -->
-                                <center><h1>WHAT IS SS12</h1></center>
+                                <center><h1>WHAT IS SS12 ?</h1></center>
                             </div>
                         </div>
                     </div>
@@ -92,7 +91,7 @@
                     <div class="container" style="padding: 3em;">
                         <div class="row">
                             <div class="col-lg-12">
-                                <center><h1>MAKER FAIR</h1></center>
+                                <center><h1>WHAT IS SS12 MAKER FAIR ?</h1></center>
                             </div>
                         </div>
                     </div>
@@ -109,7 +108,7 @@
                     <div class="container" style="padding: 3em;">
                         <div class="row">
                             <div class="col-lg-12">
-                                <center><h1>JUNIOR EINSTEIN</h1></center>
+                                <center><h1>WHAT IS SS12 JUNIOR EINSTEIN ?</h1></center>
                             </div>
                         </div>
                     </div>
@@ -128,7 +127,7 @@
                             
                             <div class="col-lg-12">
                                 <!-- <img class="card-img-top" src="images/ieeelogo.png" alt="IEEE Logo"> -->
-                                <center><h1>VIRTUAL TRACK</h1></center>
+                                <center><h1>WHAT IS SS12 VIRTUAL TRACK ?</h1></center>
                             </div>
                             
                         </div>
