added changes to the organizers part

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 </head>
 
 <body style="background-color: #4B66A4;">
-    <!-- DILLON START -->
+    
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
     </nav>
     <!-- END NAVIGATION -->
 
-    <!-- RANEESH START -->
+
     <!-- PATHWAYS CARDS -->
     <section class="pathways-additional" id="pathways-additional">
         <div class="container">
@@ -79,11 +79,9 @@
                         </div>
                     </div>
                     <div class="card-body" style="text-align: justify;">
-                        <p>IEEE is the world’s largest technical professional organization dedicated to advancing technology for the benefit of humanity. IEEE and its members inspire a global community to innovate for a better tomorrow through its highly-cited
-                            publications, conferences, technology standards, and professional and educational activities. IEEE is the trusted “voice” for engineering, computing and technology information around the globe. There are more than 420,000 IEEE
-                            members in more than 160 countries.</p>
-                        <p>IEEE publishes a third of the world’s technical literature in electrical engineering, computer science and electronics and is a leading developer of international standards that underpin many of today’s telecommunications, information
-                            technology and power generation products and services. </p>
+                        <strong>Code-A-Thon and Make-A-Thon Challenge</strong> organized to recognize the best social innovators in Asia Pacific. The theme for this year is
+                        <strong>‘EMPATHY TO ENGINEERING: SOLUTIONS FOR MACRO ISSUES’</strong>.</p> 
+                        <p>Students form Universities all over Asia and Middle East will be participating displaying their engineering skills.</p>
                     </div>
                 </div>
 
@@ -96,11 +94,8 @@
                         </div>
                     </div>
                     <div class="card-body" style="text-align: justify;">
-                        <p>IEEE is the world’s largest technical professional organization dedicated to advancing technology for the benefit of humanity. IEEE and its members inspire a global community to innovate for a better tomorrow through its highly-cited
-                            publications, conferences, technology standards, and professional and educational activities. IEEE is the trusted “voice” for engineering, computing and technology information around the globe. There are more than 420,000 IEEE
-                            members in more than 160 countries.</p>
-                        <p>IEEE publishes a third of the world’s technical literature in electrical engineering, computer science and electronics and is a leading developer of international standards that underpin many of today’s telecommunications, information
-                            technology and power generation products and services. </p>
+                        <strong>Maker Fair</strong> is a celebration of innovators, makers, doers coming together to showcase their products to the local community. All types of makers like Tech enthusiasts, Crafters, Tinkerers, Hobbyists, Industries
+                                and other organizations, clubs and forums, authors, artists, students and entrepreneurs are welcome to the Maker Fair.</p>
                     </div>
                 </div>
 
@@ -144,9 +139,7 @@
         </div>
     </section>
     <!-- END PATHWAYS CARDS -->
-    <!-- RANEESH END -->
-
-    <!-- DILLON START -->
+    
     <!-- FOOTER START -->
     <div class="container-fluid footerWrapper">
         <div class="row">
@@ -225,7 +218,6 @@
         </div>
     </div>
     <!-- FOOTER END -->
-    <!-- DILLON END -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
