--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -519,7 +519,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -540,7 +540,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -560,7 +560,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -586,7 +586,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -606,7 +606,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -627,7 +627,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -647,7 +647,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -672,7 +672,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -692,7 +692,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -713,7 +713,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -733,7 +733,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -758,7 +758,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -778,7 +778,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -799,7 +799,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
@@ -819,7 +819,7 @@
                             <div class="organization-member">
                                 <h5 class="card-title">Lorem, ipsum dolor.</h5>
                                 <h6>Lorem ipsum dolor sit amet.</h6>
-                                <a href="#" class="btn btn-primary">Know More</a>
+                                <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
 
